--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,26 @@
 {
   "name": "Picrok – AI Image Generator",
   "short_name": "",
-  "start_url": "./",
+  "description": "Generate high-quality AI images instantly with presets, styles, and smart limits.",
+  "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
+  "display_override": ["standalone"],
   "background_color": "#0f1115",
   "theme_color": "#0f1115",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
