--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
   "name": "Picrok – AI Image Generator",
-  "short_name": "",
-  "description": "Generate high-quality AI images instantly with presets, styles, and smart limits.",
-  "start_url": "./index.html",
-  "scope": "./",
+  "short_name": "Picrok",
+  "description": "Generate stunning AI images with presets, styles, and negative prompts.",
+  "start_url": ".",
   "display": "standalone",
-  "display_override": ["standalone"],
   "background_color": "#0f1115",
   "theme_color": "#0f1115",
   "orientation": "portrait-primary",
@@ -13,14 +11,12 @@
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
